--- a/manifest.json
+++ b/manifest.json
@@ -1,11 +1,17 @@
 {
-    "name": "Getting Started Example",
-    "description": "Build an Extension!",
-    "version": "1.0",
+    "name": "Short Controller",
+    "description": "Video functionality for Youtube 'Short' videos.",
+    "version": "0.1",
     "manifest_version": 3,
     "background": {
         "service_worker": "background.js"
     },
+    "icons": {
+        "16": "/icon/icon16.png",
+        "32": "/icon/icon32.png",
+        "48": "/icon/icon48.png",
+        "128": "/icon/icon128.png"
+      },
     "permissions": [
         "tabs",
         "scripting"
